<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">中国象棋</string>
    <string name="game_name">中国象棋</string>
    <string name="pooea_web">Pooea.com</string>
    <string name="new_game">新建棋局</string>
    <string name="save_manager">棋局管理</string>
    <string name="load_game">载入棋局</string>
    <string name="save_game">保存棋局</string>
    <string name="save_ok">保存成功</string>
    <string name="save_fail">保存错误</string>
    <string name="load_ok">载入成功</string>
    <string name="load_fail">载入错误</string>
    <string name="game_setting">游戏设置</string>
    <string name="game_help">帮助</string>
    <string name="game_exit">退出</string>
    <string name="game_return">返回菜单</string>
    <string name="game_over">游戏已结束，是否开始新局</string>
    <string name="game_red_winner">你已赢得此局，是否开始新局</string>
    <string name="game_black_winner">你已输掉此局，是否开始新局</string>
    <string name="music_setting">声音设置</string>
    <string name="music_on">音效开</string>
    <string name="music_off">音效关</string>
    <string name="player_null">没有找到背景音乐文件</string>
    <string name="level_setting">难度设置</string>
    <string name="level_easy">简单</string>
    <string name="level_normal">一般</string>
    <string name="level_hard">困难</string>
    <string name="game_undo">悔棋</string>
    <string name="bt_str_ok">确定</string>
    <string name="bt_str_cancel">取消</string>
    <string name="bt_str_delete">删除</string>
    <string name="info_delete_ok">删除成功</string>
    <string name="info_delete_fail">删除错误</string>
    <string name="info_save_select">请输入文件名或在已有文件中选择覆盖</string>
    <string name="info_load_select">请选择载入棋局名称</string>
    <string name="txt_save_info1">请输入保存棋局名称:</string>
    <string name="txt_save_info2">请输入保存棋局名称或从以上列表中选择一个已有棋局覆盖保存:</string>
    <string name="txt_no_save_file">当前没有保存的棋局</string>
    <string name="input_file">输入文件名称:</string>
    <string name="txt_input_info1">请从以上列表中选择待载入棋局名称:</string>
    <string name="time_init">00:00:00</string>
    <string name="help_line0">中国象棋</string>
    <string name="help_line1">1.人工智能采用C语言实现，可以获得更快的速度</string>
    <string name="help_line2">2.可保存、载入、删除棋局</string>
    <string name="help_line3">3.可开启或关闭背景音乐</string>
    <string name="help_line4">4.可设置游戏难度，难度越大计算所需时间越长</string>
    <string name="help_line5">5.可暂停、恢复游戏，可实时悔棋</string>
    <string name="help_line6">6.若发现程序Bug，请联系作者修正</string>
    <string name="help_line7">""</string>
    <string name="help_line8">作者：Han.zh</string>
    <string name="help_line9">邮件：webmster@pooea.com</string>
    <string name="help_line10">版本：V1.0</string>
    <string name="quit_prompt">按任意键返回</string>
    <string name="content_recommend">更多应用</string>
    <string name="alert">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
	<string name="is_exit_app">确定要退出程序?</string>
	<string name="gameView_computer">电脑</string>
	<string name="gameView_player">玩家</string>
	<string name="webActivityUrl">http://product.pooea.com/m_ind/android</string>
</resources>